--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADAMS ZTYPE HIGH SCORE</title>
     <style>
-        body { font-family: 'Poppins', sans-serif; text-align: center; margin-top: 50px; background-color: rgb(45, 45, 45); }
-        .count { font-size: 3em; color: white;}
+        body { font-family: 'Poppins', sans-serif; text-align: center; margin-top: 50px, background-color: rgb(45, 45, 45); }
+        .count { font-size: 3em, color: white, font-family : 'Poppins';}
+        .count { color: white; }
     </style>
 </head>
 <body>
-    <h1>Adam's Ztype Highscore</h1>
+    <h1 class="text" id="text">Adam's Ztype Highscore</h1>
     <div class="count" id="count">0</div>
 
     <script>
