--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body { font-family: 'Poppins', sans-serif; text-align: center; margin-top: 50px, background-color: rgb(45, 45, 45); }
         .count { font-size: 3em, color: white, font-family : 'Poppins';}
-        .count { color: white; }
+        .text { color: white; }
     </style>
 </head>
 <body>
