--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADAMS ZTYPE HIGH SCORE</title>
     <style>
-        body { font-family: 'Poppins', sans-serif; text-align: center; margin-top: 50px, background-color: rgb(45, 45, 45); }
-        .count { font-size: 3em, color: white, font-family : 'Poppins';}
+        body { font-family: 'Poppins', sans-serif; text-align: center; margin-top: 50px; background-color: rgb(45, 45, 45); }
+        .count { font-size: 3em; color: white; font-family : 'Poppins';}
         .text { color: white; }
     </style>
 </head>
