--- a/index.html
+++ b/index.html
@@ -3,16 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADAMS ZTYPE HIGH SCORE</title>
+    <title>Adams Ztype Highscore</title>
     <style>
-        body { font-family: 'Poppins', sans-serif; text-align: center; margin-top: 50px; background-color: rgb(45, 45, 45); }
-        .count { font-size: 3em; color: white; font-family : 'Poppins';}
-        .text { color: white; }
+        body {
+            font-family: 'Poppins', sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .count {
+            font-size: 3em;
+        }
+        .image {
+            margin-top: 20px;
+            max-width: 300px;
+        }
+        .dark-mode {
+            background-color: #333;
+            color: #fff;
+        }
+        .light-mode {
+            background-color: #fff;
+            color: #000;
+        }
+        #toggleButton {
+            margin-top: 20px;
+            padding: 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <h1 class="text" id="text">Adam's Ztype Highscore</h1>
+    <h1>Adams Ztype Highscore</h1>
     <div class="count" id="count">0</div>
+    <img class="image" id="proofImage" src="" alt="Proof Image" style="display: none;">
+    <button id="toggleButton" onclick="toggleTheme()">Toggle Light/Dark Mode</button>
 
     <script>
         function fetchCount() {
@@ -20,8 +45,37 @@
             document.getElementById('count').innerText = count;
         }
 
+        function fetchImage() {
+            const imageUrl = localStorage.getItem('proofImage') || '';
+            const proofImageElement = document.getElementById('proofImage');
+            if (imageUrl) {
+                proofImageElement.src = imageUrl;
+                proofImageElement.style.display = 'block';
+            } else {
+                proofImageElement.style.display = 'none';
+            }
+        }
+
+        function setTheme(theme) {
+            document.body.className = theme;
+            localStorage.setItem('theme', theme);
+        }
+
+        function toggleTheme() {
+            const currentTheme = localStorage.getItem('theme') || 'light-mode';
+            const newTheme = currentTheme === 'light-mode' ? 'dark-mode' : 'light-mode';
+            setTheme(newTheme);
+        }
+
+        function loadTheme() {
+            const savedTheme = localStorage.getItem('theme') || 'light-mode';
+            setTheme(savedTheme);
+        }
+
         setInterval(fetchCount, 1000); // Refresh every second
         fetchCount(); // Initial fetch
+        fetchImage(); // Fetch image on load
+        loadTheme(); // Load saved theme
     </script>
 </body>
 </html>
